# RTOS-ESP32-Smart_Home

./: .gitignore  README.md  to-do.txt
central_hub/: README.md  central_hub.py  config.py  requirements.txt
central_hub/components/: __init__.py  action_manager.py  base.py  network_actions.py  watcher.py  web_server.py
firmware/esp32_rtos_smart_home/: CMakeLists.txt  build-flash.ps1  build-only.ps1  flash-monitor.ps1  flash-only.ps1  test-ws-client.py  ws-echo-server.py
firmware/esp32_rtos_smart_home/common/: CMakeLists.txt  component.cpp  component.h  component_graph.cpp  component_graph.h
firmware/esp32_rtos_smart_home/components/: component.cpp  component.h
firmware/esp32_rtos_smart_home/components/door_sensor/: CMakeLists.txt  door_sensor.cpp  door_sensor.h
firmware/esp32_rtos_smart_home/components/gui/: CMakeLists.txt  gui.cpp  gui.h
firmware/esp32_rtos_smart_home/components/gui/lcd/: lcd.cpp  lcd.h
firmware/esp32_rtos_smart_home/components/gui/touch/: touch.h
firmware/esp32_rtos_smart_home/components/heartbeat/: CMakeLists.txt  heartbeat.cpp  heartbeat.h
firmware/esp32_rtos_smart_home/components/lcd/: CMakeLists.txt  lcd.h
firmware/esp32_rtos_smart_home/main/: CMakeLists.txt  idf_component.yml  main.cpp
webserver/: README.md  db.sqlite3  manage.py  requirements.txt
webserver/dashboard/: consumers.py  esp32_client.py  routing.py  urls.py  views.py
webserver/esp32_hub/: asgi.py  settings.py  urls.py
webserver/static/css/: style.css
webserver/static/js/: component.js  debug.js  device.js  notifications.js  websocket.js
(+30 files in other folders)
